# torch-ipc

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  ipc-scm-1.rockspec  parallel-scm-1.rockspec
benchmarks/: allgpu-allreduce.lua
doc/: BackgroundTask.md  BackgroundTaskPool.md  channel.md  index.md  map.md  marshal.md  mutex.md  sharedtable.md  spawn.md  workqueue.md
examples/: allreduce.lua  allreduce.sh  allreduce.slurm  allreduce_slurm.lua  allreduce_slurm.sh  client-server.lua  client-server.sh  map.lua  model-parallelism.lua  workqueue.lua
lua/: BackgroundTask.lua  BackgroundTaskPool.lua  DiscoveredTree.lua  FSTree.lua  LocalhostTree.lua  NullTree.lua  SlurmTree.lua  StaticTree.lua  Tree.lua  utils.lua
src/: channel.c  channel.h  cliser.c  cliser.h  error.c  error.h  flock.c  flock.h  ipc.c  map.c  map.h  marshal.c  marshal.h  mutex.c  mutex.h  parallel.c  ringbuffer.c  ringbuffer.h  serialize.c  serialize.h  sharedtable.c  sharedtable.h  spawn.c  spawn.h  workqueue.c  workqueue.h
src/generic/: cliser.c
test/: test.lua  test_BackgroundTask.lua  test_BackgroundTaskPool.lua  test_Tree.lua  test_channel.lua  test_cliser.lua  test_flock.lua  test_map.lua  test_marshal.lua  test_mutex.lua  test_sharedtable.lua  test_spawn.lua  test_workqueue.lua
